Resolved Managed Bean 'Master' to multiple managed beans. Each one has one task.

--- a/web/export.xhtml
+++ b/web/export.xhtml
@@ -102,7 +102,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.categoriesIncome}" var="c"
+                                                        <f:selectItems value="#{adding.categoriesIncome}" var="c"
                                                                        itemLabel="#{c.name}" itemValue="#{c.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieEinnahme">Hinzufügen</button>
@@ -122,7 +122,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.person}" var="p"
+                                                        <f:selectItems value="#{adding.person}" var="p"
                                                                        itemLabel="#{p.name}" itemValue="#{p.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
@@ -149,7 +149,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.categoriesOutcome}" var="c"
+                                                        <f:selectItems value="#{adding.categoriesOutcome}" var="c"
                                                                        itemLabel="#{c.name}" itemValue="#{c.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieAusgabe">Hinzufügen</button>
@@ -169,7 +169,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.person}" var="p"
+                                                        <f:selectItems value="#{adding.person}" var="p"
                                                                        itemLabel="#{p.name}" itemValue="#{p.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
@@ -205,7 +205,7 @@
                         <h:form id="Category_income">
                         Name der Kategorie für Einnahmen:
                             <h:inputText id="category_income" binding="#{Category}" />
-                            <p:commandButton value = "Hinzufügen" action="#{master.addCategory(Category.value, true)}" onclick="index.xhtml" />
+                            <p:commandButton value = "Hinzufügen" action="#{adding.addCategory(Category.value, true)}" onclick="index.xhtml" />
                         </h:form>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                         <h:form id="Category_outcome">
                         Name der Kategorie für Einnahmen:
                             <h:inputText id="category_outcome" binding="#{Category}" />
-                            <p:commandButton value = "Hinzufügen" action="#{master.addCategory(Category.value, false)}" onclick="index.xhtml" />
+                            <p:commandButton value = "Hinzufügen" action="#{adding.addCategory(Category.value, false)}" onclick="index.xhtml" />
                         </h:form>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                         <h:form id="Person">
                         Name der Person:
                             <h:inputText id="person" binding="#{person}" />
-                            <p:commandButton value = "Hinzufügen" action="#{master.addPerson(person.value)}" onclick="index.xhtml" />
+                            <p:commandButton value = "Hinzufügen" action="#{adding.addPerson(person.value)}" onclick="index.xhtml" />
                         </h:form>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.categoriesIncome}" var="c"
+                                                        <f:selectItems value="#{adding.categoriesIncome}" var="c"
                                                                        itemLabel="#{c.name}" itemValue="#{c.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieEinnahme">Hinzufügen</button>
@@ -315,7 +315,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.person}" var="p"
+                                                        <f:selectItems value="#{adding.person}" var="p"
                                                                        itemLabel="#{p.name}" itemValue="#{p.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
@@ -342,7 +342,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.categoriesOutcome}" var="c"
+                                                        <f:selectItems value="#{adding.categoriesOutcome}" var="c"
                                                                        itemLabel="#{c.name}" itemValue="#{c.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieAusgabe">Hinzufügen</button>
@@ -362,7 +362,7 @@
                                                 </td>
                                                 <td>
                                                     <h:selectOneMenu>
-                                                        <f:selectItems value="#{master.person}" var="p"
+                                                        <f:selectItems value="#{adding.person}" var="p"
                                                                        itemLabel="#{p.name}" itemValue="#{p.name}" />
                                                     </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
