--- a/web/modals.xhtml
+++ b/web/modals.xhtml
@@ -150,8 +150,7 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                        <button type="button" class="close" data-dismiss="modal">Schließen</button>
+                        <button type="button" class="close btnClose" data-dismiss="modal">Schließen</button>
                         <h4 class="modal-title">Kategorie erstellen</h4>
                     </div>
                     <div class="modal-body">
